# competitive-fetch

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  args.cpp  cmake_uninstall.cmake.in  fetch.cpp  fzf.cpp  generator.cpp  main.cpp
headers/: args.hpp  fetch.hpp  fzf.hpp  generator.hpp
